@@ -1,6 +1,6 @@
 # Conways-CLIfe
 Conway's Game of Life in the Command Line Interface.  
-Features a bunch of premade presets and an editor to create your own presets.  
+Features a bunch of premade presets, a random generator and an editor to create your own presets.  
 Windows Users: I strongly recommend using CMD or Git Bash to run this since it looks better than PowerShell.  
 
 ### This game is part of my [CLI game collection](https://github.com/Sv443/CLI-Games-Collection)
@@ -17,5 +17,5 @@ Windows Users: I strongly recommend using CMD or Git Bash to run this since it l
 
 ## Dependencies:
 - keypress
-- noisejs
+- perlin-noise
 - svjsl
