@@ -7,8 +7,6 @@
         [ 0, 0, 1, 1, 0, 0],
         [ 0, 0, 1, 1, 0, 0],
         [ 0, 0, 0, 0, 1, 1],
-        [ 0, 0, 0, 0, 1, 1],
-        [ 0 ],
-        [ 0 ]
+        [ 0, 0, 0, 0, 1, 1]
     ]
 }
