@@ -1,9 +1,10 @@
 {
     "name": "Glider",
-    "size": [ 20, 20 ],
+    "size": [ 3, 3 ],
     "pattern": [
-        [ 0, 1, 0 ],
-        [ 0, 0, 1 ],
-        [ 1, 1, 1 ]
+        [ 0 ],
+        [ 0, 0, 1, 0 ],
+        [ 0, 0, 0, 1 ],
+        [ 0, 1, 1, 1 ]
     ]
 }
