@@ -1,16 +1,0 @@
-{
-    "name": "Pent-2 (unstable)",
-    "size": [ 8, 9 ],
-    "pattern": [
-        [ 0 ],
-        [ 0 ],
-        [ 0 ],
-        [ 0, 0, 1, 1, 1, 0, 0 ],
-        [ 0, 0, 1, 1, 1, 0, 0 ],
-        [ 0, 0, 1, 0, 1, 0, 0 ],
-        [ 0, 0, 1, 1, 1, 0, 0 ],
-        [ 0 ],
-        [ 0 ],
-        [ 0 ]
-    ]
-}
