@@ -1,26 +1,20 @@
 {
     "name": "Pentadecathlon",
-    "size": [ 16, 9 ],
+    "size": [ 3, 8 ],
     "pattern": [
         [ 0 ],
         [ 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-        [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
         [ 0 ],
-        [ 0 ]
+        [ 0 ],
+        [ 0 ],
+        [ 0 ],
+        [ 0, 0, 0, 0, 0, 1, 1, 1 ],
+        [ 0, 0, 0, 0, 0, 1, 0, 1 ],
+        [ 0, 0, 0, 0, 0, 1, 1, 1 ],
+        [ 0, 0, 0, 0, 0, 1, 1, 1 ],
+        [ 0, 0, 0, 0, 0, 1, 1, 1 ],
+        [ 0, 0, 0, 0, 0, 1, 1, 1 ],
+        [ 0, 0, 0, 0, 0, 1, 0, 1 ],
+        [ 0, 0, 0, 0, 0, 1, 1, 1 ]
     ]
 }
