@@ -1,6 +1,6 @@
 {
     "name": "R-Pentomino (unstable)",
-    "size": [ 8, 8 ],
+    "size": [ 3, 3 ],
     "pattern": [
         [ 0 ],
         [ 0 ],
