@@ -1,0 +1,14 @@
+{
+    "name": "Semi-Pentadecathlon (unstable)",
+    "size": [ 3, 4 ],
+    "pattern": [
+        [ 0 ],
+        [ 0 ],
+        [ 0 ],
+        [ 0 ],
+        [ 0, 0, 0, 1, 1, 1 ],
+        [ 0, 0, 0, 1, 1, 1 ],
+        [ 0, 0, 0, 1, 0, 1 ],
+        [ 0, 0, 0, 1, 1, 1 ]
+    ]
+}
