@@ -2,9 +2,11 @@
     "name": "Toad",
     "size": [ 4, 4 ],
     "pattern": [
-        [ 0, 0, 1, 0 ],
-        [ 1, 0, 0, 1 ],
-        [ 1, 0, 0, 1 ],
-        [ 0, 1, 0, 0 ]
+        [ 0 ],
+        [ 0 ],
+        [ 0, 0, 0, 0, 1, 0 ],
+        [ 0, 0, 1, 0, 0, 1 ],
+        [ 0, 0, 1, 0, 0, 1 ],
+        [ 0, 0, 0, 1, 0, 0 ]
     ]
 }
